may/src/codegen/tests/snapshots/may__codegen__tests__add_two_three.snap
---
source: may/src/codegen/tests/mod.rs
expression: PrettyPrint(&converted_leaf)
---
(
    (
        fun
        0
        (
            (
                ind
                Set0
                "Nat"
                ()
                (
                    (
                        (
                            0
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            (
                ind
                Set0
                "Nat"
                ()
                (
                    (
                        (
                            0
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
        )
        (
            ind
            Set0
            "Nat"
            ()
            (
                (
                    (
                        0
                    )
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        (
            match
            2
            1
            (
                ind
                Set0
                "Nat"
                ()
                (
                    (
                        (
                            0
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            (
                (
                    1
                    (
                        (
                            vcon
                            (
                                ind
                                Set0
                                "Nat"
                                ()
                                (
                                    (
                                        (
                                            0
                                        )
                                        ()
                                    )
                                    (
                                        ()
                                        ()
                                    )
                                )
                            )
                            0
                        )
                        (
                            1
                            0
                            2
                        )
                    )
                )
                (
                    0
                    1
                )
            )
        )
    )
    (
        (
            vcon
            (
                ind
                Set0
                "Nat"
                ()
                (
                    (
                        (
                            0
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            0
        )
        (
            (
                vcon
                (
                    ind
                    Set0
                    "Nat"
                    ()
                    (
                        (
                            (
                                0
                            )
                            ()
                        )
                        (
                            ()
                            ()
                        )
                    )
                )
                0
            )
            (
                vcon
                (
                    ind
                    Set0
                    "Nat"
                    ()
                    (
                        (
                            (
                                0
                            )
                            ()
                        )
                        (
                            ()
                            ()
                        )
                    )
                )
                1
            )
        )
    )
    (
        (
            vcon
            (
                ind
                Set0
                "Nat"
                ()
                (
                    (
                        (
                            0
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            0
        )
        (
            (
                vcon
                (
                    ind
                    Set0
                    "Nat"
                    ()
                    (
                        (
                            (
                                0
                            )
                            ()
                        )
                        (
                            ()
                            ()
                        )
                    )
                )
                0
            )
            (
                (
                    vcon
                    (
                        ind
                        Set0
                        "Nat"
                        ()
                        (
                            (
                                (
                                    0
                                )
                                ()
                            )
                            (
                                ()
                                ()
                            )
                        )
                    )
                    0
                )
                (
                    vcon
                    (
                        ind
                        Set0
                        "Nat"
                        ()
                        (
                            (
                                (
                                    0
                                )
                                ()
                            )
                            (
                                ()
                                ()
                            )
                        )
                    )
                    1
                )
            )
        )
    )
)
