may/src/codegen/tests/snapshots/may__codegen__tests__comprehensive_syntax_check.snap
---
source: may/src/codegen/tests/mod.rs
expression: PrettyPrint(&converted_leaf)
---
(
    (
        fun
        nonrec
        (
            Prop0
            0
        )
        1
        1
    )
    (
        (
            (
                fun
                nonrec
                (
                    Set0
                    0
                )
                (
                    for
                    (
                        1
                    )
                    Prop0
                )
                (
                    ind
                    Prop0
                    "Eq"
                    (
                        2
                    )
                    (
                        (
                            ()
                            (
                                2
                            )
                        )
                    )
                )
            )
            (
                ind
                Set0
                "Nat"
                ()
                (
                    (
                        (
                            0
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            (
                vcon
                (
                    ind
                    Set0
                    "Nat"
                    ()
                    (
                        (
                            (
                                0
                            )
                            ()
                        )
                        (
                            ()
                            ()
                        )
                    )
                )
                1
            )
        )
        (
            vcon
            (
                ind
                Set0
                "Nat"
                ()
                (
                    (
                        (
                            0
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            1
        )
    )
    (
        (
            fun
            nonrec
            (
                Set0
                0
            )
            (
                (
                    ind
                    Prop0
                    "Eq"
                    (
                        1
                    )
                    (
                        (
                            ()
                            (
                                1
                            )
                        )
                    )
                )
                0
            )
            (
                vcon
                (
                    ind
                    Prop0
                    "Eq"
                    (
                        2
                    )
                    (
                        (
                            ()
                            (
                                2
                            )
                        )
                    )
                )
                0
            )
        )
        (
            ind
            Set0
            "Nat"
            ()
            (
                (
                    (
                        0
                    )
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        (
            vcon
            (
                ind
                Set0
                "Nat"
                ()
                (
                    (
                        (
                            0
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            1
        )
    )
)
