may/src/codegen/tests/snapshots/may__codegen__tests__eq.snap
---
source: may/src/codegen/tests/mod.rs
expression: PrettyPrint(&converted_leaf)
---
(
    fun
    nonrec
    (
        Set0
        0
    )
    (
        for
        (
            1
        )
        Prop0
    )
    (
        ind
        Prop0
        "Eq"
        (
            2
        )
        (
            (
                ()
                (
                    2
                )
            )
        )
    )
)
