may/src/codegen/tests/snapshots/may__codegen__tests__list.snap
---
source: may/src/codegen/tests/mod.rs
expression: PrettyPrint(&converted_leaf)
---
(
    fun
    nonrec
    (
        Set0
    )
    Set0
    (
        ind
        Set0
        "List"
        ()
        (
            (
                (
                    2
                    1
                )
                ()
            )
            (
                ()
                ()
            )
        )
    )
)
