may/src/codegen/tests/snapshots/may__codegen__tests__list_cons.snap
---
source: may/src/codegen/tests/mod.rs
expression: PrettyPrint(&converted_leaf)
---
(
    fun
    nonrec
    (
        Set0
    )
    (
        for
        (
            0
            (
                ind
                Set0
                "List"
                ()
                (
                    (
                        (
                            2
                            1
                        )
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
        )
        (
            ind
            Set0
            "List"
            ()
            (
                (
                    (
                        3
                        1
                    )
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
    )
    (
        vcon
        (
            ind
            Set0
            "List"
            ()
            (
                (
                    (
                        2
                        1
                    )
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        0
    )
)
