may/src/codegen/tests/snapshots/may__codegen__tests__stdlib.snap
---
source: may/src/codegen/tests/mod.rs
expression: PrettyPrint(&converted_leaf)
---
(
    ind
    Prop0
    "DummyLeaf"
    ()
    ()
)
